Add feat select markup elements by user selection

--- a/CrossElementsPosition/Views/Windows/MainWindow.xaml
+++ b/CrossElementsPosition/Views/Windows/MainWindow.xaml
@@ -88,9 +88,9 @@
                     <TextBlock Text="Элементы разметки"
                                Style="{StaticResource TextAboveButton}" />
                     <Button Style="{StaticResource SelectButton}"
-                            Command="{Binding GetBlockElementsCommand}" />
+                            Command="{Binding GetMarkupElementsCommand}" />
                 </UniformGrid>
-                <TextBox Text="{Binding BlockElementIds}"
+                <TextBox Text="{Binding MarkupElementIds}"
                          Style="{StaticResource SelectedItemsBox}" />
             </UniformGrid>
         </GroupBox>
